creusot/tests/should_fail/prusti/adt/tuple.stderr
error[creusot]: function was supposed to return data with home/lifetime `'c` but it is returning data with home/lifetime `'a`
 --> tuple.rs:7:5
  |
7 |     (x, y)
  |     ^^^^^^

error: aborting due to previous error

